newsl list small fix on mobile

--- a/assets/less/pages/news.less
+++ b/assets/less/pages/news.less
@@ -189,6 +189,7 @@ nav:not(.navbar){
       flex-basis: 100%!important;
       max-width: 100%!important;
       margin-top: 30px!important;
+        margin-right: 0;
     });
   }
 
